--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
           </div>
         </div>
         
-        <a class="icon" href="#ancora"> 
+        <a class="again" href="#ancora"> 
           <i class="fa-solid fa-arrow-down"></i>
          </a>
 
